--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ date: '2020 01 26 '
 output: html_document
 ---
 
-## Tidy tuesday solutions
+# Tidy tuesday solutions
 
 The source is:  <https://github.com/rfordatascience/tidytuesday>
 
